# cfasttext

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: CI.yml
include/: cfasttext.h
lib/: cfasttext.cc
